--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </style>
   <body>
     <h1><b>David's Lackluster Games!</b></h1>
-    <div id="button"><a href = "./TicTacToe/index.html" style="text-decoration:none">Tic-Tac-Toe</a><br/>
-      <a href = "./connect4/index.html">Connect Four</a>
+    <div id="button"><a href = "./TicTacToe/tictactoe.html" style="text-decoration:none">Tic-Tac-Toe</a><br/>
+      <a href = "./Connect4/connect4.html">Connect Four</a>
     </div>
 
     <!-- <a href = "./TicTacToe/index.html">TicTacToe!</a> -->
