--- a/Connect4/connect4.html
+++ b/Connect4/connect4.html
@@ -7,6 +7,19 @@
       margin: auto;
       background-color: lightcyan;
       }
+      a{
+        position: fixed;
+        left:20px;
+        bottom: 20px;
+        text-decoration: none;
+        border:none;
+        outline:none;
+        color:#000000;
+        font-family: monospace;
+        font-variant: small-caps;
+        text-shadow: -4px 4px 10px rgba(100, 100, 100, 1);
+        font-size: 50px;
+      }
       h1{
       margin: auto;
       font-family:monospace;
@@ -109,6 +122,8 @@
       <p id="screenText">Player 1's Turn</p>
   		<br/>
   		<p id="playagain"></p>
+      <div id="button"><a href = "../index.html" style="text-decoration:none">Back</a><br/>
+      </div>
    </body>
    <script src="./connect4.js"></script>
 </html>
